# amoen_calcul_objectif_dashboard

./: .gitignore  .pre-commit-config.yaml  Calculs.ipynb  Makefile  README  README.md  app.py  dashboard_amoen copy.py  dashboard_amoen.py  main.py  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  run_test.yml
docs/: doc_technique.md  documentation.md  mkdocs.yml
docs-simple/: documentation.md
docs/docs/: index.md
mkdocs/: mkdocs.yml
mkdocs/docs/sections/: onglets.md
sections/TLDR/: index.html
sections/donnees/: index.html
sections/faq/: index.html
sections/helpers/: affectations_sre.py  agents_energetiques.py  amoen_historique.py  avusy.py  calcul_dj.py  graphique_bars_exploitation.py  note_calcul.py  note_calcul_main.py  note_calcul_sauvegarde.py  query_IDC.py  rapport.py  sanitize_mongo.py  save_excel_streamlit.py  sidebar.py  utils.py  validation_saisie.py
sections/helpers/admin/: admin_chiffre_cle.py  admin_db_mgmt.py  database.py
sections/helpers/note_calcul/: __init__.py  calculs.py  constantes.py  create_dataframe_agent_energetique.py  create_dataframe_list.py  create_dataframe_meteo.py  create_dataframe_periode_list.py  create_dataframe_results.py  latex.py
site/: index.html
site/sections/onglets/: index.html
site/sections/surelevations/: index.html
tests/: test_note_calcul.py
