[project]
name = "amoen-calcul-objectif-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0",
    "cryptography>=48.0.0",
    "openpyxl>=3.1.5",
    "plotly>=6.7.0",
    "polars>=1.41.2",
    "pymongo>=4.17.0",
    "pymongo-auth-aws>=1.3.0",
    "pymongocrypt>=1.18.0",
    "pyproj>=3.7.2",
    "reportlab>=4.5.1",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "streamlit-authenticator>=0.4.2",
]
