[project]
name = "amoen-calcul-objectif-dashboard"
version = "0.1.10"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0",
    "bandit>=1.9.4",
    "bump-my-version>=1.4.1",
    "cryptography>=49.0.0",
    "mypy>=2.1.0",
    "openpyxl>=3.1.5",
    "pip>=26.1.2",
    "plotly>=6.7.0",
    "polars>=1.41.2",
    "pre-commit>=4.6.0",
    "pymongo>=4.17.0",
    "pymongo-auth-aws>=1.3.0",
    "pymongocrypt>=1.18.0",
    "pyproj>=3.7.2",
    "pytest>=9.0.3",
    "reportlab>=4.5.1",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "streamlit-authenticator>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "bandit>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.mypy]
python_version = "3.13"
strict = false
# Gradually enable these as you add type hints:
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false   # flip to true once all functions are annotated
ignore_missing_imports = true   # third-party libs without stubs (streamlit, pymongo…)
exclude = [
    "tests/",
    "mkdocs/",
]

[tool.bandit]
exclude_dirs = ["tests", "mkdocs"]
skips = [
    "B101",  # assert statements — fine in tests/application code here
]
severity = "medium"   # report medium and high findings only

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
]

[tool.bumpversion]
current_version = "0.1.10"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = '^version = "{current_version}"'
replace = 'version = "{new_version}"'
