[project]
name = "amoen-calcul-objectif-dashboard"
version = "0.1.21"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0",
    "bandit>=1.9.4",
    "bump-my-version>=1.4.1",
    "cryptography>=49.0.0",
    "mypy>=2.1.0",
    "openpyxl>=3.1.5",
    "pip>=26.1.2",
    "plotly>=6.7.0",
    "polars>=1.41.2",
    "pre-commit>=4.6.0",
    "pymongo>=4.17.0",
    "pymongo-auth-aws>=1.3.0",
    "pymongocrypt>=1.18.0",
    "pyproj>=3.7.2",
    "pytest>=9.0.3",
    "reportlab>=4.5.1",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "streamlit-authenticator>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "bandit>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

# [tool.mypy], [tool.ty.*], and [tool.bandit] now live in standalone files
# (mypy.ini, ty.toml, bandit.toml) synced from the ci-templates repo, so they
# apply consistently across all POS repos without duplicating per-project
# metadata in this pyproject.toml. See ci-templates/README.md.

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
]

[tool.bumpversion]
current_version = "0.1.21"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = '^version = "{current_version}"'
replace = 'version = "{new_version}"'
